--- a/octofit-tracker/frontend/public/index.html
+++ b/octofit-tracker/frontend/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>OctoFit Tracker</title>
+    <link rel="icon" href="/docs/octofitapp-small.png" />
+    <meta name="theme-color" content="#0b5ed7" />
   </head>
   <body>
     <div id="root"></div>
